fix: add styles scrollbar

--- a/overlay/src/App.module.scss
+++ b/overlay/src/App.module.scss
@@ -4,4 +4,16 @@
 .wrapper{
    width: 100%;
    height: 100%;
+   overflow: -moz-scrollbars-none;
 }
+.wrapper::-webkit-scrollbar {
+   width: 0;
+ }
+ 
+ .wrapper::-webkit-scrollbar-thumb {
+   width: 0;
+ }
+ 
+ .wrapper::-webkit-scrollbar-track {
+   width: 0;
+ }
