--- a/overlay/src/components/Login/Login.module.scss
+++ b/overlay/src/components/Login/Login.module.scss
@@ -1,4 +1,16 @@
 .wrapperLogin{
     width: 100%;
     height: 100%;
+    overflow: -moz-scrollbars-none;
 }
+.wrapperLogin::-webkit-scrollbar {
+    width: 0;
+  }
+  
+  .wrapperLogin::-webkit-scrollbar-thumb {
+    width: 0;
+  }
+  
+  .wrapperLogin::-webkit-scrollbar-track {
+    width: 0;
+  }
